# project-memory

./: .gitignore  AGENTS.md  AGENT_GUIDE.md  CLAUDE.md  README.md  pyproject.toml
.agents/skills/project-memory/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/commands/: add-new-feature-with-cli-server-and-tests.md  add-or-evolve-database-schema-and-memory-types.md  feature-development.md
.claude/homunculus/instincts/inherited/: project-memory-instincts.yaml
.claude/skills/project-memory/: SKILL.md
.claude/skills/python-typer-cli/: SKILL.md
.claude/skills/sqlite-fts5-memory-db/: SKILL.md
.codex/: AGENTS.md  config.toml
.github/workflows/: ci.yml  publish.yml  release.yml
src/openbrain/: __init__.py  cli.py  db.py  index.py  search.py  server.py
src/project_memory/: __init__.py  cli.py  db.py  embeddings.py  index.py  portability.py  protocols.py  search.py  server.py
tests/: test_cli.py  test_db.py  test_embeddings.py  test_index.py  test_portability.py  test_protocols.py  test_server.py
