[project]
name = "project-memory"
version = "0.2.0"
description = "Project Memory: repo-scoped memory engine for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [ {name = "jflamb"} ]
keywords = ["AI", "memory", "sqlite", "semantic search", "mcp"]
dependencies = [
  "mcp>=1.12.4",
  "starlette>=0.52.0",
  "typer>=0.10.0",
  "uvicorn[standard]>=0.23.0",
  "pydantic>=2.0.0",
  "sqlite-vec>=0.1",
  "httpx>=0.24",
]
[project.urls]
Homepage = "https://github.com/jflamb/project-memory"
Repository = "https://github.com/jflamb/project-memory"

[project.scripts]
project-memory = "project_memory.cli:app"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-anyio>=0.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/project_memory"]

[build-system]
requires = ["hatchling>=1.13.0"]
build-backend = "hatchling.build"
